Added: Post method of address
